--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -29,8 +29,8 @@ h4 {
     float: right;
 }
 
-.post-form textarea,
-.post-form input {
+.article-form textarea,
+.article-form input {
     width: 100%;
 }
 
@@ -43,17 +43,17 @@ h4 {
     margin-right: 20px;
 }
 
-.post {
+.article {
     margin-bottom: 70px;
 }
 
-.post h2 a,
-.post h2 a:visited {
+.article h2 a,
+.article h2 a:visited {
     color: #000000;
 }
 
-.post > .date,
-.post > .actions {
+.article > .date,
+.article > .actions {
     float: right;
 }
 
