--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -1,20 +1,20 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <article class="post">
+    <article class="article">
         <aside class="actions">
             {% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
+                <a class="btn btn-default" href="{% url 'article_edit' pk=article.pk %}">
                     {% include './icons/pencil-fill.svg' %}
                 </a>
             {% endif %}
         </aside>
-        {% if post.published_date %}
+        {% if article.published_date %}
             <time class="date">
-                {{ post.published_date }}
+                {{ article.published_date }}
             </time>
         {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <h2>{{ article.title }}</h2>
+        <p>{{ article.text|linebreaksbr }}</p>
     </article>
 {% endblock %}
