--- a/blog/templates/blog/article_edit.html
+++ b/blog/templates/blog/article_edit.html
@@ -1,8 +1,8 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>New post</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <h2>New article</h2>
+    <form method="post" class="article-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
