Use dark buttons

--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -2,7 +2,7 @@
 
 {% block header_button %}
     <a href="{% url 'article_edit' pk=article.pk %}" class="top-menu">
-	<span class="btn btn-primary">Edit Entry</span>
+	<span class="btn btn-dark">Edit Entry</span>
     </a>
 {% endblock %}
 
