--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -1,5 +1,11 @@
 {% extends 'blog/base.html' %}
 
+{% block header_button %}
+    <a href="{% url 'article_new' %}" class="top-menu">
+	<span class="btn btn-dark">Create Entry</span>
+    </a>
+{% endblock %}
+
 {% block content %}
     {% for article in articles %}
         <article class="article">
