--- a/blog/templates/blog/article_edit.html
+++ b/blog/templates/blog/article_edit.html
@@ -3,9 +3,9 @@
 {% block header_button %}{% endblock %}
 
 {% block content %}
-    <h2>{{ create|yesno:'New,Edit' }} article</h2>
+    <h2>New  article</h2>
     <form method="post" class="article-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">{{ create|yesno:'Create,Save' }}</button>
+        <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
