Make buttons more obvious, and views require login (#1)
* Make buttons more obvious, and views require login

Adidng login view/template

* Use dark buttons

* Remove create vs new fixes

--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -1,14 +1,13 @@
 {% extends 'blog/base.html' %}
 
+{% block header_button %}
+    <a href="{% url 'article_edit' pk=article.pk %}" class="top-menu">
+	<span class="btn btn-dark">Edit Entry</span>
+    </a>
+{% endblock %}
+
 {% block content %}
     <article class="article">
-        <aside class="actions">
-            {% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'article_edit' pk=article.pk %}">
-                    {% include './icons/pencil-fill.svg' %}
-                </a>
-            {% endif %}
-        </aside>
         {% if article.published_date %}
             <time class="date">
                 {{ article.published_date }}
