--- a/blog/templates/blog/article_edit.html
+++ b/blog/templates/blog/article_edit.html
@@ -1,7 +1,9 @@
 {% extends 'blog/base.html' %}
 
+{% block header_button %}{% endblock %}
+
 {% block content %}
-    <h2>New article</h2>
+    <h2>New  article</h2>
     <form method="post" class="article-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
